# solana-study

./: .gitignore  Cargo.toml  README.md
hw_01_helloworld/: Cargo.toml
hw_01_helloworld/src/: lib.rs
hw_01_helloworld/tests/: lib.rs
hw_02_simaple_save_query/: Cargo.toml  README.md
hw_02_simaple_save_query-dapp/: .eslintcache  package.json
hw_02_simaple_save_query-dapp/src/: App.js  HelloWorld.js  Layout.js
hw_02_simaple_save_query/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
hw_03_anchor_auction/: Cargo.toml  README.md
hw_03_anchor_auction/programs/anchor_auction/: Cargo.toml
hw_03_anchor_auction/programs/anchor_auction/src/: lib.rs
hw_03_anchor_auction/src/: libbbb.rs
hw_03_simple_auction/: Cargo.toml  README.md
hw_03_simple_auction/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
hw_04_simple_token/: Cargo.toml  README.md
hw_04_simple_token/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  native_mint.rs  processor.rs  state.rs
hw_05_token-swap/: Cargo.toml
hw_05_token-swap/src/: constraints.rs  instruction.rs  processor.rs  state.rs
hw_05_token-swap/src/curve/: base.rs  calculator.rs  fees.rs
hw_06_anchor_simple/: Anchor.toml  README.md  package.json  tsconfig.json
hw_06_anchor_simple/client/: client.ts  hw_06_anchor_simple.json
hw_06_anchor_simple/migrations/: deploy.ts
hw_06_anchor_simple/programs/hw_06_anchor_simple/: Cargo.toml
hw_06_anchor_simple/programs/hw_06_anchor_simple/src/: error.rs  lib.rs  state.rs
hw_06_anchor_simple/tests/: hw_06_anchor_simple-dapp.ts
hw_07_client_wallet/: README.md  package.json  tsconfig.json
hw_07_client_wallet/src/: main.ts
hw_08_phantom_example/: README.md  package.json  tsconfig.json
hw_08_phantom_example/public/: index.html
hw_08_phantom_example/src/: App.tsx  constants.ts  index.tsx  types.ts
hw_08_phantom_example/src/components/: index.tsx
hw_08_phantom_example/src/components/Button/: index.tsx
hw_08_phantom_example/src/components/Logs/: Log.tsx  index.tsx
hw_08_phantom_example/src/utils/: createTransferTransaction.ts  getProvider.ts  hexToRGB.ts  index.ts  pollSignatureStatus.ts  signAllTransactions.ts  signAndSendTransaction.ts  signMessage.ts  signTransaction.ts
hw_09_client_react/: .env  .prettierignore  .prettierrc.json  README.md  config-overrides.js  package.json  tsconfig.json
hw_09_client_react/public/: index.html  robots.txt
hw_09_client_react/src/: App.css  App.tsx  index.tsx
(+2 files in other folders)
