[package]
name = "hw_04_simple_token"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.7.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
num_enum = "0.5.7"
solana-program = "1.10.35"
thiserror = "1.0.31"

[dev-dependencies]
lazy_static = "1.4.0"
proptest = "1.0.0"
serial_test = "0.6.0"
solana-program-test = "1.10.35"
solana-sdk = "1.10.35"


[lib]
name = "hw_04_simple_token"
crate-type = ["cdylib", "lib"]
